--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Who am I?</title>
   </head>
   <body>
-    <p>Hello, world!</p>
+    Jean Valjean
+    55 Rue Plumet
+    Amonade, VA 24601
   </body>
 </html>
