Add break tag <br> to the first two lines of the mailing address

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Who am I?</title>
   </head>
   <body>
-    Jean Valjean
-    55 Rue Plumet
+    Jean Valjean<br>
+    55 Rue Plumet<br>
     Amonade, VA 24601
   </body>
 </html>
