--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Who am I?</title>
+    <title>Learn Enough to Be Dangerous</title>
   </head>
   <body>
-    Jean Valjean<br>
-    55 Rue Plumet<br>
-    Amonade, VA 24601
+    <h1>The Learn Enough Story</h1>
+    <h2>Background</h2>
+    <h2>Founders</h2>
+    <h3>Michael Hartl</h3>
+    <h3>Lee Donahoe</h3>
+    <h3>Nick Merwin</h3>
   </body>
 </html>
