--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   </head>
   <body>
     <h1>The Learn Enough Story</h1>
+
+    <p>
+      Learn Enough to Be Dangerous is a leader in the movement to teachtechnical sophistication, the seemingly magical ability to take
+      command of your computer and get it to do your bidding. This
+      includes
+      everything from command lines and coding to guessing keyboard
+      shortcuts,
+      Googling error messages, and knowing when to just reboot the darn
+      thing.
+      We believe there are at least a billion people who can benefit from
+      learning technical sophistication, probably more. To join our
+      movement, sign up for our official email list now.
+    </p>
     <h2>Background</h2>
     <h2>Founders</h2>
     <h3>Michael Hartl</h3>
