Add a <em> element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>The Learn Enough Story</h1>
 
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teachtechnical sophistication, the seemingly magical ability to take
+      Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take
       command of your computer and get it to do your bidding. This
       includes
       everything from command lines and coding to guessing keyboard
