--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       shortcuts,
       Googling error messages, and knowing when to just reboot the darn
       thing.
-      We believe there are at least a billion people who can benefit from
+      We believe there are <strong>at least a billion people</strong> who can benefit from
       learning technical sophistication, probably more. To join our
       movement, sign up for our official email list now.
     </p>
