Add a paragraph under h2 heading Founders

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     </p>
     <h2>Background</h2>
     <h2>Founders</h2>
+
+    <p>
+      <em><strong>Learn Enough to Be Dangerous</strong></em> was founded in 2015 by Michael
+      Hartl, Lee
+      Donahoe, and Nick Merwin. We believe that the kind of technical
+      sophistication taught by the Learn Enough tutorials can benefit
+      <strong>at least a billion people</strong>, and probably more.
+    </p>
     <h3>Michael Hartl</h3>
     <h3>Lee Donahoe</h3>
     <h3>Nick Merwin</h3>
