--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       thing.
       We believe there are <strong>at least a billion people</strong> who can benefit from
       learning technical sophistication, probably more. To join our
-      movement, sign up for our official email list now.
+      movement, <a href="https://learnenough.com/email">sign up for our official email
+      list</a>
     </p>
     <h2>Background</h2>
     <h2>Founders</h2>
