Add the links to the founders' twitter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Learn Enough to Be Dangerous</title>
   </head>
   <body>
-    
+
     <h1>The Learn Enough Story</h1>
 
     <p>
@@ -68,6 +68,10 @@
       are slightly exaggerated.
     </p>
 
+    <p>
+      You should follow Michael on Twitter<a href="https://twitter.com/mhartl">here</a>.
+    </p>
+
     <h3>Lee Donahoe</h3>
 
     <p>
@@ -77,6 +81,11 @@
       designing
       interfaces, doing front-end development, or writing some of the
       interface-related Learn Enough tutorials.
+    </p>
+
+    <p>
+      You should follow Lee on Twitter
+      <a href="https://twitter.com/leedonahoe">here</a>.
     </p>
 
     <h3>Nick Merwin</h3>
@@ -89,6 +98,11 @@
       at heart. He's just as happy shredding well-spec'd lines of code
       from a
       tour bus as he is from his kitchen table.
+    </p>
+
+    <p>
+      You should follow Nick on Twitter
+      <a href="https://twitter.com/nickmerwin">here</a>.
     </p>
 
   </body>
