Add target attribute to the anchor tag

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </p>
 
     <p>
-      You should follow Michael on Twitter<a href="https://twitter.com/mhartl">here</a>.
+      You should follow Michael on Twitter<a href="https://twitter.com/mhartl" target=“_blank” rel=”noopener”>here</a>.
     </p>
 
     <h3>Lee Donahoe</h3>
@@ -85,7 +85,7 @@
 
     <p>
       You should follow Lee on Twitter
-      <a href="https://twitter.com/leedonahoe">here</a>.
+      <a href="https://twitter.com/leedonahoe" target=“_blank” rel=”noopener”>here</a>.
     </p>
 
     <h3>Nick Merwin</h3>
@@ -102,7 +102,7 @@
 
     <p>
       You should follow Nick on Twitter
-      <a href="https://twitter.com/nickmerwin">here</a>.
+      <a href="https://twitter.com/nickmerwin" target=“_blank” rel=”noopener”>here</a>.
     </p>
 
   </body>
