Add gravatar hotlink for the Learn Enough founders images

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
       You should follow Michael on Twitter<a href="https://twitter.com/mhartl" target=“_blank” rel=”noopener”>here</a>.
     </p>
 
+    <img
+      src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?
+      s=150"
+      alt="Michael Hartl">
+
     <h3>Lee Donahoe</h3>
 
     <p>
@@ -89,6 +94,11 @@
       You should follow Lee on Twitter
       <a href="https://twitter.com/leedonahoe" target=“_blank” rel=”noopener”>here</a>.
     </p>
+
+    <img
+      src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?
+      s=150"
+      alt="Lee Donahoe">
 
     <h3>Nick Merwin</h3>
 
@@ -106,6 +116,11 @@
       You should follow Nick on Twitter
       <a href="https://twitter.com/nickmerwin" target=“_blank” rel=”noopener”>here</a>.
     </p>
+
+    <img
+      src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?
+      s=150"
+      alt="Nick Merwin">
 
   </body>
 </html>
