Link the image on our page to the original image’s URL

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       list</a>
     </p>
 
-    <img src="images/kitten.jpg" alt="An adorable kitten">
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+      <img src="images/kitten.jpg" alt="An adorable kitten">
+    </a>
 
     <h2>Background</h2>
 
