Add links to Learn Enough twitter account

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
       list</a>
     </p>
 
+    <p>
+      <a href="https://twitter.com/learnenough" target="_blank"
+      rel="noopener" style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png">
+      </a>
+
+      You should follow Learn Enough on Twitter
+      <a href="https://twitter.com/learnenough"
+      target="_blank" rel="noopener">here</a>.
+    </p>
+
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
       <img src="images/kitten.jpg" alt="An adorable kitten">
     </a>
