Dowload a new astronaut image and change the link to it within tags.html

--- a/tags.html
+++ b/tags.html
@@ -7,8 +7,10 @@
 
     <h1>Important HTML tags</h1>
 
-    <img src="images/astronaut_tagged.jpg" alt="Tagged Astronaut">
-
+    <a href="https://www.flickr.com/photos/jdhancock/3814523970">
+        <img src="images/astronaut_tagged.jpg" alt="Tagged Astronaut">
+    </a>
+    
     <p>
       This page is designed as a quick reference for some of the common
       tags
