Toggle word wrap on an inline element

--- a/tags.html
+++ b/tags.html
@@ -7,9 +7,7 @@
 
     <h1>Important HTML tags</h1>
 
-    <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank">
-      <img src="images/astronaut_tagged.jpg" alt="Tagged Astronaut">
-    </a>
+    <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank"><img src="images/astronaut_tagged.jpg" alt="Tagged Astronaut"></a>
 
     <p>
       This page is designed as a quick reference for some of the common
