Add header,div,span element within tags.html

--- a/tags.html
+++ b/tags.html
@@ -24,9 +24,12 @@
       many of
       the most important ones.
     </p>
+    
+    <header>
+      <h2><span>Block Elements</span></h2>
+    </header>
 
-    <h2>Block Elements</h2>
-
+    <div>
     <table>
       <tr>
         <th>Tag</th>
@@ -64,9 +67,13 @@
         <td>include a table data cell</td>
       </tr>
     </table>
+    </div>
 
-    <h2>Inline Elements</h2>
+    <header>
+      <h2>Inline Elements</h2>
+    </header>
 
+    <div>
     <table>
       <tr>
         <th>Tag</th>
@@ -117,6 +124,6 @@
         <td><code>code</code></td>
       </tr>
     </table>
-
+    </div>
   </body>
 </html>
