--- a/mock_dick.html
+++ b/mock_dick.html
@@ -33,7 +33,7 @@
     </a>
 
     <div>
-
+  
     <h3>Moby-Dick: A classic tale of the sea</h3>
 
     <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
@@ -49,7 +49,6 @@
     </p>
 
     <blockquote>
-
       <p>
         <span>Call me Ishmael.</span> Some years ago–never mind how long
         precisely–having little or no money in my purse, and nothing
@@ -65,6 +64,26 @@
         jillion pages. The only thing bigger than Moby Dick (who—
         <em>spoiler alert!</em>—is a giant white whale) is the book itself.
       </p>
-    </div>
+    
+    <h4>Our top 3 favorite things about Moby Dick</h4>
+    
+    <ol>
+      <li>Vengeful whale</li>
+      <li>Salty sailors</li>
+      <li>The names "Queequeg" and "Starbuck"</li>
+    </ol>
+
+    <h4>Other things about Moby Dick</h4>
+
+    <ul>
+      <li>
+        Chapter after chapter (after chapter) of meticulous detail about whaling
+      </li>
+      <li>
+        The story pretty much <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)" target="_blank" rel="noopener">happened in real life</a>
+      </li>
+      <li>Mad sea captains are fun</li>
+    </ul>
+  </div>
 </body>
 </html>
