Add navigation menu to the HTML tags page

--- a/tags.html
+++ b/tags.html
@@ -5,6 +5,12 @@
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+
     <h1>Important HTML tags</h1>
 
     <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank"><img src="images/astronaut_tagged.jpg" alt="Tagged Astronaut"></a>
