--- a/mock_dick.html
+++ b/mock_dick.html
@@ -7,6 +7,13 @@
   <body>
 
     <!-- much here to be styled, will do so in last section -->
+
+    <div>
+        <a href="index.html">Home</a>
+        <a href="moby_dick.html">Moby Dick</a>
+        <a href="tags.html">HTML Tags</a>
+    </div>
+    
     <header>
       <h1>A Softcover Book Report</h1>
       <h2>Moby-Dick (or, The Whale)</h2>
