--- a/tags.html
+++ b/tags.html
@@ -5,10 +5,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: blue;">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">Moby Dick</a>
       
     </div>
 
@@ -44,14 +44,14 @@
         <th>Purpose</th>
       </tr>
       <tr>
-        <td><code>h1</code>&ndash;<code>h6</code></td>
-        <td>headings</td>
-        <td>include a heading (levels 1&ndash;6)</td>
+        <td style="padding: 10px;"><code>h1</code>&ndash;<code>h6</code></td>
+        <td style="padding: 10px;">headings</td>
+        <td style="padding: 10px;">include a heading (levels 1&ndash;6)</td>
       </tr>
       <tr>
-        <td><code>p</code></td>
-        <td>paragraph</td>
-        <td>include a paragraph of text</td>
+        <td style="padding: 10px;"><code>p</code></td>
+        <td style="padding: 10px;">paragraph</td>
+        <td style="padding: 10px;">include a paragraph of text</td>
       </tr>
       <tr>
         <td><code>table</code></td>
@@ -132,5 +132,34 @@
       </tr>
     </table>
     </div>
+
+    <header>
+      <h2><span>Document Tags</span></h2>
+    </header>
+
+    <table>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+        <th>Example</th>
+        <th>Result</th>
+      </tr>
+      <tr>
+        <td>html</td>
+      </tr>
+      <tr>
+        <td>head</td>
+      </tr>
+      <tr>
+        <td>body</td>
+      </tr>
+      <tr>
+        <td>title</td>
+      </tr>
+      <tr>
+        <td>meta</td>
+      </tr>
+    </table>
   </body>
 </html>
