--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <p>
       <a href="https://twitter.com/learnenough" target="_blank"
-      rel="noopener" style="text-decoration: none;">
+      rel="noopener" class="image-link">
         <img src="images/small_twitter_logo.png">
       </a>
 
@@ -81,7 +81,7 @@
       <a href="https://www.learnenough.com/">learnenough.com</a>.
     </p>
 
-    <h2>Founders</h2>
+    <h2 id="founders">Founders</h2>
 
     <p>
       <em><strong>Learn Enough to Be Dangerous</strong></em> was founded in 2015 by Michael
