--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,13 +3,14 @@
   <head>
     <title>Moby Dick</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
     <div style="text-align: right;">
-    <a href="index.html" style="text-decoration: none; color: blue;">Home</a>
-    <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">HTML Tags</a>
-    <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">Moby Dick</a>  
+    <a href="index.html" class="nav-spacing">Home</a>
+    <a href="tags.html" class="nav-spacing" >HTML Tags</a>
+    <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>  
     </div>
     
     <header style="text-align: center; margin: 0 0 80px;">
