--- a/tags.html
+++ b/tags.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HTML Tags</title><meta charset="utf-8">
+    <title>HTML Tags</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css"
   </head>
   <body>
 
     <div style="text-align: right;">
-      <a href="index.html" style="text-decoration: none; color: blue;">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">HTML Tags</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">Moby Dick</a>
+      <a href="index.html" class="nav-spacing">Home</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
       
     </div>
 
